syntax = "proto3";
package CacheType;
option java_multiple_files = true;
option java_package = "chiw.spc.proto";
option java_outer_classname = "CommodityPB";

message CommodityMsg {
  string id = 1;
  string name = 2;
  double price = 3;
  double remainingQty = 4;
}
